# feed-my-ledger

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  Clippy.toml  README.md  SPECIFICATION.md
.github/workflows/: ci.yml  release.yml
docs/: README.md  _config.yml  api_usage.md  architecture.md  authentication.md  data_model.md  extending_cloud_support.md  index.md  release.md  scripting.md
patched_crates/instant/: Cargo.toml
src/: lib.rs  main.rs
src/cloud_adapters/: auth.rs  buffered.rs  excel_365.rs  file.rs  google_sheets4.rs  mod.rs  retry.rs
src/core/: account.rs  budget.rs  mod.rs  prices.rs  query.rs  scheduler.rs  sharing.rs  utils.rs  verification.rs
src/import/: csv.rs  dedup.rs  json.rs  ledger.rs  mod.rs  ofx.rs  qif.rs
src/script/: mod.rs
tests/: access_control_tests.rs  budget_tests.rs  cloud_adapter_tests.rs  config_parse_tests.rs  dedup_tests.rs  file_token_store_tests.rs  google_sheet_name_tests.rs  hash_tests.rs  import_tests.rs  initial_login_tests.rs  ledger_tests.rs  oauth_tests.rs  performance_tests.rs  query_tests.rs  reconcile_tests.rs  retry_tests.rs  script_tests.rs  shared_ledger_service_tests.rs  thread_safety_tests.rs
