[package]
name = "rusty-ledger"
version = "1.0.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = { version = "0.24", features = ["native-tokio", "http1", "tls12"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
yup-oauth2 = "12"
csv = "1"
iso_currency = "0.5"

[dev-dependencies]
wiremock = "0.6"
