[package]
name = "rusty-ledger"
version = "2.0.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = { version = "0.24", features = ["native-tokio", "http1", "tls12"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
yup-oauth2 = "12"
csv = "1"
iso_currency = "0.5"
cron = "0.15"
rhai = "1"
indicatif = "0.17"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"

[features]
bank-api = []

[dev-dependencies]
wiremock = "0.6"

[patch.crates-io]
instant = { path = "patched_crates/instant" }
