[package]
name = "feed-my-ledger"
version = "2.0.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
hyper = "*"
hyper-util = "*"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4", features = ["derive"] }
toml = "0.9"
yup-oauth2 = "12"
csv = "1"
iso_currency = "0.5"
cron = "0.15"
rhai = "1"
indicatif = "0.18"
aes-gcm = "0.10"
rand = "0.9"
base64 = "0.22"
sha2 = "0.10"
http-body-util = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[features]
bank-api = []

[dev-dependencies]
wiremock = "0.6"

[patch.crates-io]
instant = { path = "patched_crates/instant" }
